<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_network">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.nextclanui.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_network"
        android:name="com.example.nextclanui.ui.network.NetworkFragment"
        android:label="@string/menu_network"
        tools:layout="@layout/fragment_network" />

    <fragment
        android:id="@+id/nav_business"
        android:name="com.example.nextclanui.ui.business.BusinessFragment"
        android:label="@string/menu_business"
        tools:layout="@layout/fragment_business" />
</navigation>